slider connect to block width

--- a/learn.html
+++ b/learn.html
@@ -6,11 +6,51 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium delectus optio culpa alias, nobis ex voluptate commodi perspiciatis atque! Quae tempora facilis aspernatur ea explicabo unde adipisci eligendi possimus, ad! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dignissimos magni corporis fuga, in dolorem magnam, iure eum aspernatur illum tempore vel placeat, qui quod. Perspiciatis nulla nostrum, illum perferendis.</p>	
-
 	
 	<div class="slider slider-horisontal">
+		<div class="slider__name"> block width </div>
 		<div class="slider__marker"></div>
+	</div>
+
+
+	<div class="blocks-wrapper">
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+		<div class="block">
+			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
+		</div>
+
+
 	</div>
 
 
