--- a/learn.html
+++ b/learn.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	
-	<div class="slider slider-horisontal">
-		<div class="slider__name"> block width </div>
-		<div class="slider__marker"></div>
+	<div class="slider slider-h">
+		<div class="slider-h__name"> block width </div>
+		<div class="slider-h__marker"></div>
 	</div>
 
 
