--- a/learn.html
+++ b/learn.html
@@ -6,12 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	
-	<div class="slider slider-h">
-		<div class="slider-h__name"> block width </div>
-		<div class="slider-h__marker"></div>
-	</div>
 
+	<div class="slider-h b-width-ctrl"> b-width </div>
+	<div class="slider-h col-gap-width-ctrl col-gap-width-ctrl--thin"> columng-gap-width </div>
+	<div class="slider-h no-ctrl"> </div>
 
 	<div class="blocks-wrapper">
 		<div class="block">
@@ -49,8 +47,6 @@
 		<div class="block">
 			<img src="https://img00.deviantart.net/f4bf/i/2012/299/c/8/autumn_in_the_forest_by_valiunic-d5j0w6d.jpg" alt="" class="block__img">
 		</div>
-
-
 	</div>
 
 
@@ -63,4 +59,7 @@
 	</script>
 	
 	<script src="script/learn.js"></script>
+
+	<script src="slider-h/slider-h.js"></script>
 </html>
+
