--- a/learn.html
+++ b/learn.html
@@ -6,13 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium delectus optio culpa alias, nobis ex voluptate commodi perspiciatis atque! Quae tempora facilis aspernatur ea explicabo unde adipisci eligendi possimus, ad! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dignissimos magni corporis fuga, in dolorem magnam, iure eum aspernatur illum tempore vel placeat, qui quod. Perspiciatis nulla nostrum, illum perferendis.</p>	
-
 	
-	<div class="slider slider-horisontal">
-		<div class="slider__marker"></div>
+	<header> HEAD </header>
+	<div class="layout">
+
+		<div class="column-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus animi deleniti veniam omnis ipsum id dolores et eligendi nobis, laboriosam qui aspernatur enim modi eos eum repellendus velit facere. Quo.</div>
+		<div class="column-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolor maxime assumenda eligendi nobis sit deleniti eum ipsum perferendis ullam molestiae aliquid mollitia eveniet, totam, ab odio consequatur consequuntur minima?</div>
+		<div class="column-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id quod mollitia temporibus expedita quos itaque nisi blanditiis officiis fugit, porro, assumenda doloremque! Ducimus ipsum aspernatur, rerum blanditiis laborum minus alias.</div>
+
+		
 	</div>
 
+
+	<footer> FOOT </footer>
 
 </body>
 
@@ -23,4 +29,9 @@
 	</script>
 	
 	<script src="script/learn.js"></script>
+
+
+	
+
+
 </html>
