--- a/learn.html
+++ b/learn.html
@@ -8,11 +8,20 @@
 <body>
 	
 	<header> HEAD </header>
-	<div class="layout">
+	<div class="flex-container">
 
-		<div class="column">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae totam cum ducimus, velit quasi, odit laboriosam. Commodi vitae nesciunt, possimus ipsa delectus, at expedita odit! Modi, aut error officia doloremque necessitatibus alias! Reiciendis veniam molestias labore enim dignissimos necessitatibus aperiam quae earum provident vel officiis, illo facere, sit quasi nemo soluta voluptatum dicta qui ut magni, quis illum accusamus tempore assumenda. Aspernatur nam eos repudiandae nihil, esse odio at neque porro eligendi recusandae ipsum sapiente magni excepturi quidem reprehenderit commodi quo illum optio sit, quos ad explicabo ipsa saepe itaque. Perspiciatis ipsum accusantium voluptates, voluptatum molestiae aut est aperiam accusamus ipsam beatae quod at a culpa pariatur modi alias expedita error fugit? Laudantium pariatur laborum vel facilis at ad, ex tempore amet sint veritatis ducimus delectus, magni repudiandae eligendi error odio corrupti. Minima commodi totam vel, maiores ea, cumque, repellat sequi placeat reprehenderit vero doloribus fuga dolorem voluptas natus esse sed assumenda facere sint quo atque architecto eaque, quaerat dolor laboriosam. Autem veritatis odit repellat magni quasi rerum tempore quo recusandae molestias accusamus quia provident sunt repudiandae, dolore error pariatur possimus cupiditate inventore temporibus asperiores. At quaerat perspiciatis ipsum facere, quod aliquam labore quam tempora veritatis! Aliquam tenetur consequatur facilis, quae quibusdam, assumenda quo! Accusantium consequatur, repellat nam! Laborum numquam, suscipit ab doloribus cupiditate, dolorem veritatis, itaque delectus fuga dolorum voluptas similique tempora dicta eligendi ipsum quam? Dicta voluptatum dolorem eos impedit libero quia perspiciatis commodi! Impedit, modi, assumenda totam earum tempora quis deserunt quaerat officia, nobis fuga animi voluptatem.</div>
+		<div class="flex-block">Hello</div>
+		<div class="flex-block">Hello, my darling,<br> Hello, my honey <br> Hello, my darling,<br> Hello, my honey <br></div>
+		<div class="flex-block">Hello</div>
+		<div class="flex-block">Hello, my darling</div>
+		<div class="flex-block">Hello</div>
 
-		
+		<div class="flex-block">Hello</div>
+		<div class="flex-block">Hello, my darling</div>
+		<div class="flex-block">Hello</div>
+		<div class="flex-block">Hello, my darling</div>
+		<div class="flex-block">Hello</div>
+	
 	</div>
 
 
