--- a/learn.html
+++ b/learn.html
@@ -10,18 +10,17 @@
 	<header> HEAD </header>
 	<div class="flex-container">
 
-		<div class="flex-block">Hello</div>
-		<div class="flex-block">Hello, my darling,<br> Hello, my honey <br> Hello, my darling,<br> Hello, my honey <br></div>
-		<div class="flex-block">Hello</div>
-		<div class="flex-block">Hello, my darling</div>
-		<div class="flex-block">Hello</div>
-
-		<div class="flex-block">Hello</div>
-		<div class="flex-block">Hello, my darling</div>
-		<div class="flex-block">Hello</div>
-		<div class="flex-block">Hello, my darling</div>
-		<div class="flex-block">Hello</div>
+		<div class="flex-block">Hello, my baby</div>
+		<div class="flex-block">Hello, my honey<br> Hello, my rag time gal </div>
+		<div class="flex-block">Send me a kiss by wire</div>
+		<div class="flex-block">Baby, my hearts on fire</div>
+		<div class="flex-block">Hello, my baby</div>
+		<div class="flex-block">Hello, my honey<br> Hello, my rag time gal </div>
+		<div class="flex-block">Send me a kiss by wire</div>
+		<div class="flex-block">Baby, my hearts on fire</div>
 	
+		hmb, hmh, hmrtg, smkbw, bmhof,
+
 	</div>
 
 
