--- a/learn.html
+++ b/learn.html
@@ -7,24 +7,88 @@
 </head>
 <body>
 	
-	<header> HEAD </header>
-	<div class="flex-container">
+	<header>
+		<div class="logo logo--header"></div>
+		<div class="nav nav--header">
+			<div class="nav__item nav__item--header"></div>
+			<div class="nav__item nav__item--header"></div>
+			<div class="nav__item nav__item--header"></div>
+			<div class="nav__item nav__item--header"></div>
+		</div>
 
-		<div class="flex-block">Hello, my baby</div>
-		<div class="flex-block">Hello, my honey<br> Hello, my rag time gal </div>
-		<div class="flex-block">Send me a kiss by wire</div>
-		<div class="flex-block">Baby, my hearts on fire</div>
-		<div class="flex-block">Hello, my baby</div>
-		<div class="flex-block">Hello, my honey<br> Hello, my rag time gal </div>
-		<div class="flex-block">Send me a kiss by wire</div>
-		<div class="flex-block">Baby, my hearts on fire</div>
+	</header>
 	
-		hmb, hmh, hmrtg, smkbw, bmhof,
+	<main>
+		<div class="main-block">
+			<p class="main-block__text">
+				<h1>Lorem ipsum dolor.</h1>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi similique dicta cumque, ab fugiat alias laudantium praesentium unde nulla, incidunt natus expedita harum et reiciendis obcaecati error vero vitae sint voluptatum nostrum cupiditate, repellat est deleniti quae. Voluptatum sint nemo quia quidem necessitatibus cum quae esse doloremque. Reprehenderit recusandae laboriosam repellat blanditiis fugit rem cum at iste, placeat vel rerum veniam voluptatem, unde deserunt, libero non voluptates enim dolores dolorem ut nam beatae ratione aspernatur officia! Amet deleniti voluptatem vitae est dignissimos at beatae sit praesentium earum, delectus aliquid nemo molestias, repudiandae culpa quasi officiis sequi iure recusandae consectetur odit quaerat fuga? Corrupti autem enim, in sunt error, velit neque. Dolorum reprehenderit modi et nulla, repellendus vitae dolorem voluptate quis quo maiores eum perferendis repudiandae suscipit! Autem architecto pariatur delectus, provident similique quam vel nostrum impedit inventore odit obcaecati dolorem corporis ratione libero, dolores quaerat et quo illum, atque nemo excepturi maxime suscipit veritatis. Id minus facilis quibusdam eius dolorum? Impedit ea eum quidem nostrum deleniti. Aut, harum voluptatum culpa dolore quia repellat neque incidunt itaque laudantium sunt necessitatibus eligendi delectus deleniti fuga sequi a totam eius nihil quis. Aliquam in, ducimus quos veniam vel blanditiis, consequuntur delectus nemo itaque.
+			</p>
+			<img src="" alt='main-block__img' class="main-block__img" >
+		</div>
+		
+		<div class="main-block">
+			<p class="main-block__text">
+				<h1>Lorem ipsum dolor.</h1>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi similique dicta cumque, ab fugiat alias laudantium praesentium unde nulla, incidunt natus expedita harum et reiciendis obcaecati error vero vitae sint voluptatum nostrum cupiditate, repellat est deleniti quae. Voluptatum sint nemo quia quidem necessitatibus cum quae esse doloremque. Reprehenderit recusandae laboriosam repellat blanditiis fugit rem cum at iste, placeat vel rerum veniam voluptatem, unde deserunt, libero non voluptates enim dolores dolorem ut nam beatae ratione aspernatur officia! Amet deleniti voluptatem vitae est dignissimos at beatae sit praesentium earum, delectus aliquid nemo molestias, repudiandae culpa quasi officiis sequi iure recusandae consectetur odit quaerat fuga? Corrupti autem enim, in sunt error, velit neque. Dolorum reprehenderit modi et nulla, repellendus vitae dolorem voluptate quis quo maiores eum perferendis repudiandae suscipit! Autem architecto pariatur delectus, provident similique quam vel nostrum impedit inventore odit obcaecati dolorem corporis ratione libero, dolores quaerat et quo illum, atque nemo excepturi maxime suscipit veritatis. Id minus facilis quibusdam eius dolorum? Impedit ea eum quidem nostrum deleniti. Aut, harum voluptatum culpa dolore quia repellat neque incidunt itaque laudantium sunt necessitatibus eligendi delectus deleniti fuga sequi a totam eius nihil quis. Aliquam in, ducimus quos veniam vel blanditiis, consequuntur delectus nemo itaque.
+			</p>
+			<img src="" alt='main-block__img' class="main-block__img" >
+		</div>
 
-	</div>
+		<div class="main-block">
+			<p class="main-block__text">
+				<h1>Lorem ipsum dolor.</h1>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi similique dicta cumque, ab fugiat alias laudantium praesentium unde nulla, incidunt natus expedita harum et reiciendis obcaecati error vero vitae sint voluptatum nostrum cupiditate, repellat est deleniti quae. Voluptatum sint nemo quia quidem necessitatibus cum quae esse doloremque. Reprehenderit recusandae laboriosam repellat blanditiis fugit rem cum at iste, placeat vel rerum veniam voluptatem, unde deserunt, libero non voluptates enim dolores dolorem ut nam beatae ratione aspernatur officia! Amet deleniti voluptatem vitae est dignissimos at beatae sit praesentium earum, delectus aliquid nemo molestias, repudiandae culpa quasi officiis sequi iure recusandae consectetur odit quaerat fuga? Corrupti autem enim, in sunt error, velit neque. Dolorum reprehenderit modi et nulla, repellendus vitae dolorem voluptate quis quo maiores eum perferendis repudiandae suscipit! Autem architecto pariatur delectus, provident similique quam vel nostrum impedit inventore odit obcaecati dolorem corporis ratione libero, dolores quaerat et quo illum, atque nemo excepturi maxime suscipit veritatis. Id minus facilis quibusdam eius dolorum? Impedit ea eum quidem nostrum deleniti. Aut, harum voluptatum culpa dolore quia repellat neque incidunt itaque laudantium sunt necessitatibus eligendi delectus deleniti fuga sequi a totam eius nihil quis. Aliquam in, ducimus quos veniam vel blanditiis, consequuntur delectus nemo itaque.
+			</p>
+			<img src="" alt='main-block__img' class="main-block__img" >
+		</div>
+		
+	</main>
+
+	
+
+	
+	<footer>
+		<div class="footer-block">
+			<div class="footer-block__img-link"></div>
+			<div class="footer-block__img-link"></div>
+			<div class="footer-block__img-link"></div>
+		</div>
 
 
-	<footer> FOOT </footer>
+		<div class="footer-block">
+			<div class="footer-block__article-link">
+				<h1>Lorem ipsum.</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.</p>
+			</div>
+			<div class="footer-block__article-link">
+				<h1>Lorem ipsum.</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis consequuntur maiores ipsa hic sint sunt ratione modi suscipit error. Voluptas doloremque qui esse debitis nam cum facere. Maiores, ad, culpa. Nemo, libero dolorum excepturi eos iure vitae consectetur obcaecati error ex reprehenderit sed ipsam in iusto veniam quod, facere officiis provident debitis. Eum, dignissimos! Maxime distinctio in dolores dolorem fugiat eos laborum odit necessitatibus molestias molestiae repudiandae eveniet, assumenda, labore voluptatibus natus voluptate delectus dignissimos inventore iste obcaecati ipsa accusantium. Temporibus quisquam enim quidem, iure molestiae explicabo atque quaerat ullam libero delectus, voluptatibus, nemo esse recusandae qui accusamus voluptas officiis.</p>
+			</div>
+			<div class="footer-block__article-link">
+				<h1>Lorem ipsum.</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur laboriosam qui maiores tempore suscipit mollitia ducimus totam, fugiat porro unde soluta iste quos aliquam pariatur, doloribus tenetur voluptates quam quia fuga ea nemo nisi iusto officia. Sint, id vitae pariatur temporibus illo totam animi! Temporibus voluptates laudantium, nobis esse optio voluptatum impedit sit vero repellendus vitae recusandae asperiores officia ut amet accusantium pariatur beatae explicabo tenetur quasi quos autem earum. Accusamus molestias, recusandae, nam at dolores corporis placeat iusto aspernatur, atque veniam sint! Minima iusto commodi placeat voluptate consectetur! Cumque ipsum minima modi aspernatur, quo, iusto. Hic pariatur dolorem, sequi.</p>
+			</div>
+		</div>
+
+
+		<div class="footer-block">
+			<div class="footer-block__article-link--with-logo">
+				<h1>Lorem ipsum.</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.</p>
+			</div>
+			<div class="footer-block__article-link--with-logo">
+				<h1>Lorem ipsum.</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.</p>				
+			</div>
+			<div class="footer-block__article-link--with-logo">
+				<h1>Lorem ipsum.</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.</p>
+			</div>
+		</div>
+
+
+	</footer>
 
 </body>
 
