--- a/learn.html
+++ b/learn.html
@@ -7,90 +7,33 @@
 </head>
 <body>
 	
-	<header>
-		<div class="logo logo--header"></div>
-		<div class="nav nav--header">
-			<div class="nav__item nav__item--header"></div>
-			<div class="nav__item nav__item--header"></div>
-			<div class="nav__item nav__item--header"></div>
-			<div class="nav__item nav__item--header"></div>
-		</div>
-	</header>
-	
-	<main>
-		<div class="main-block">
-			<div class="main-block__text">
-				<h1>Lorem ipsum dolor.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi similique dicta cumque, ab fugiat alias laudantium praesentium unde nulla, incidunt natus expedita harum et reiciendis obcaecati error vero vitae sint voluptatum nostrum cupiditate, repellat est deleniti quae. Voluptatum sint nemo quia quidem necessitatibus cum quae esse doloremque. Reprehenderit recusandae laboriosam repellat blanditiis fugit rem cum at iste, placeat vel rerum veniam voluptatem, unde deserunt, libero non voluptates enim dolores dolorem ut nam beatae ratione aspernatur officia! Amet deleniti voluptatem vitae est dignissimos at beatae sit praesentium earum, delectus aliquid nemo molestias, repudiandae culpa quasi officiis sequi iure recusandae consectetur odit quaerat fuga? Corrupti autem enim, in sunt error, velit neque. Dolorum reprehenderit modi et nulla, repellendus vitae dolorem voluptate quis quo maiores eum perferendis repudiandae suscipit! Autem architecto pariatur delectus, provident similique quam vel nostrum impedit inventore odit obcaecati dolorem corporis ratione libero, dolores quaerat et quo illum, atque nemo excepturi maxime suscipit veritatis. Id minus facilis quibusdam eius dolorum? Impedit ea eum quidem nostrum deleniti. Aut, harum voluptatum culpa dolore quia repellat neque incidunt itaque laudantium sunt necessitatibus eligendi delectus deleniti fuga sequi a totam eius nihil quis. Aliquam in, ducimus quos veniam vel blanditiis, consequuntur delectus nemo itaque.
-			</div>
-			<div class="main-block__side">
-				<img src="images\logo.png" alt='main-block__img' class="main-block__img" >
-				<img src="images\logo.png" alt='main-block__img' class="main-block__img" >
-			</div>		
-		</div>
-
-		<div class="main-block">
-			<div class="main-block__text">
-				<h1>Lorem ipsum dolor.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi similique dicta cumque, ab fugiat alias laudantium praesentium unde nulla, incidunt natus expedita harum et reiciendis obcaecati error vero vitae sint voluptatum nostrum cupiditate, repellat est deleniti quae. Voluptatum sint nemo quia quidem necessitatibus cum quae esse doloremque. Reprehenderit recusandae laboriosam repellat blanditiis fugit rem cum at iste, placeat vel rerum veniam voluptatem, unde deserunt, libero non voluptates enim dolores dolorem ut nam beatae ratione aspernatur officia! Amet deleniti voluptatem vitae est dignissimos at beatae sit praesentium earum, delectus aliquid nemo molestias, repudiandae culpa quasi officiis sequi iure recusandae consectetur odit quaerat fuga? Corrupti autem enim, in sunt error, velit neque. Dolorum reprehenderit modi et nulla, repellendus vitae dolorem voluptate quis quo maiores eum perferendis repudiandae suscipit! Autem architecto pariatur delectus, provident similique quam vel nostrum impedit inventore odit obcaecati dolorem corporis ratione libero, dolores quaerat et quo illum, atque nemo excepturi maxime suscipit veritatis. Id minus facilis quibusdam eius dolorum? Impedit ea eum quidem nostrum deleniti. Aut, harum voluptatum culpa dolore quia repellat neque incidunt itaque laudantium sunt necessitatibus eligendi delectus deleniti fuga sequi a totam eius nihil quis. Aliquam in, ducimus quos veniam vel blanditiis, consequuntur delectus nemo itaque.
-			</div>
-			<div class="main-block__side">
-				<img src="images\logo.png" alt='main-block__img' class="main-block__img" >
-			</div>		
-		</div>
-
-		<div class="main-block">
-			<div class="main-block__text">
-				<h1>Lorem ipsum dolor.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi similique dicta cumque, ab fugiat alias laudantium praesentium unde nulla, incidunt natus expedita harum et reiciendis obcaecati error vero vitae sint voluptatum nostrum cupiditate, repellat est deleniti quae. Voluptatum sint nemo quia quidem necessitatibus cum quae esse doloremque. Reprehenderit recusandae laboriosam repellat blanditiis fugit rem cum at iste, placeat vel rerum veniam voluptatem, unde deserunt, libero non voluptates enim dolores dolorem ut nam beatae ratione aspernatur officia! Amet deleniti voluptatem vitae est dignissimos at beatae sit praesentium earum, delectus aliquid nemo molestias, repudiandae culpa quasi officiis sequi iure recusandae consectetur odit quaerat fuga? Corrupti autem enim, in sunt error, velit neque. Dolorum reprehenderit modi et nulla, repellendus vitae dolorem voluptate quis quo maiores eum perferendis repudiandae suscipit! Autem architecto pariatur delectus, provident similique quam vel nostrum impedit inventore odit obcaecati dolorem corporis ratione libero, dolores quaerat et quo illum, atque nemo excepturi maxime suscipit veritatis. Id minus facilis quibusdam eius dolorum? Impedit ea eum quidem nostrum deleniti. Aut, harum voluptatum culpa dolore quia repellat neque incidunt itaque laudantium sunt necessitatibus eligendi delectus deleniti fuga sequi a totam eius nihil quis. Aliquam in, ducimus quos veniam vel blanditiis, consequuntur delectus nemo itaque.
-			</div>
-			<div class="main-block__side">
-				<img src="images\logo.png" alt='main-block__img' class="main-block__img" >
-			</div>		
-		</div>
-	</main>
-	
-	<footer>
-		<div class="footer-block">
-			<img src="images\logo.png" alt="footer-block__img-link" class="footer-block__img-link">
-			<img src="images\logo.png" alt="footer-block__img-link" class="footer-block__img-link">
-			<img src="images\logo.png" alt="footer-block__img-link" class="footer-block__img-link">
-		</div>
-
-		<div class="footer-block">
-			<div class="footer-block__article-link">
-				<h1>Lorem ipsum.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.
-			</div>
-
-			<div class="footer-block__article-link">
-				<h1>Lorem ipsum.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.
-			</div>
-
-			<div class="footer-block__article-link">
-				<h1>Lorem ipsum3.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.
-			</div>
-		</div>
-
-		<div class="footer-block">
-			<div class="footer-block__article-link--with-logo">
-				<h1>Lorem ipsum.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.
-			</div>
-
-			<div class="footer-block__article-link--with-logo">
-				<h1>Lorem ipsum.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.
-			</div>
-
-			<div class="footer-block__article-link--with-logo">
-				<h1>Lorem ipsum.</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur odio reiciendis ipsum alias. Porro earum temporibus repudiandae, odit molestiae mollitia fuga distinctio odio aperiam natus, reiciendis neque asperiores quod, ipsum cum. Labore veritatis molestiae, quia explicabo. Tempora ipsam ut, obcaecati rem et deleniti cupiditate pariatur? Nam, itaque cumque consectetur vero. Reiciendis sint maiores, dolor repellendus nulla fugiat iusto nam magnam earum, possimus quibusdam suscipit, hic fuga vel doloribus numquam exercitationem at laudantium animi quia obcaecati harum reprehenderit dolorum, quisquam eaque? Molestias, fugit ipsam sapiente consequuntur doloremque non perferendis, itaque qui in provident, quae eligendi similique cum veritatis natus! Ab, aliquam.
-			</div>
-		</div>
-	</footer>
+	<div class="container">
+		<header>header</header>
+		<nav>
+			<ul>
+				<li>
+					<a href="#">link 1</a>
+				</li>
+				<li>
+					<a href="#">link 2</a>
+				</li>
+				<li>
+					<a href="#">link 3</a>
+				</li>
+				<li>
+					<a href="#">link 4</a>
+				</li>
+				<li>
+					<a href="#">link 5</a>
+				</li>
+				<li>
+					<a href="#">link 6</a>
+				</li>
+			</ul>
+		</nav>
+		<main>main</main>
+		<footer>footer</footer>
+	</div>
 
 </body>
 
