--- a/learn.html
+++ b/learn.html
@@ -8,54 +8,11 @@
 </head>
 <body>
 
-	<header>
-		<div class="logo"></div>
-		<nav>
-			<div class="nav-item">#1</div>
-			<div class="nav-item">#2</div>
-			<div class="nav-item">#3</div>
-			<div class="nav-item">#4</div>
-		</nav>
-	</header>	
-
-	<main>
-		<div class="text-block">
-			<h1>Lorem ipsum dolor.</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis soluta quidem repellendus dolor eligendi labore ex, magnam mollitia sed maxime veniam blanditiis quod, eum quaerat nam deleniti, non quasi. Eveniet totam voluptas quis, quos a repellat laboriosam nesciunt amet beatae consectetur quo, quam accusamus cum repellendus unde voluptatem blanditiis. Iste.</p>
-		</div>
-		<div class="image-block"></div>
-	</main>
-
-	<footer>
-		<div class="row">
-			<div class="text-block--logo">
-				<p> <h1>3</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis culpa nisi quasi illum totam aspernatur et ipsum distinctio voluptate veritatis.</p>
-			</div>
-			<div class="text-block">
-				<p> <h1>2</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam rerum maxime enim asperiores consectetur hic fugiat at veniam illum fugit.</p>
-			</div>
-			<div class="image-block"></div>
-		</div>
-		<div class="row">
-			<div class="text-block--logo">
-				<p> <h1>6</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, magnam ut et aliquid aperiam recusandae sequi vitae culpa earum dolores.</p>
-			</div>
-			<div class="text-block">
-				<p> <h1>5</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, doloremque mollitia ullam. Officia nihil eum dolores ab, est quod aperiam.</p>
-			</div>
-			<div class="image-block"></div>
-		</div>
-		<div class="row">
-			<div class="text-block--logo">
-				<p> <h1>9</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nostrum voluptatibus minus, deleniti illum quis numquam aut nihil sunt! Nemo.</p>
-			</div>
-			<div class="text-block">
-				<p> <h1>8</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, vero recusandae alias adipisci doloremque dolorem quibusdam deleniti nam cumque eum.</p>
-			</div>
-			<div class="image-block"></div>
-		</div>
-	</footer>
-	
+	<div class="container">
+		<div class="block1"></div>
+		<div class="block2"></div>
+		<div class="block3"></div>
+	</div>
 
 </body>
 
